# mapper

Android/GyroPanorama/: settings.gradle
Android/GyroPanorama/app/src/androidTest/java/com/thunderwiring/myapplication/: ExampleInstrumentedTest.kt
Android/GyroPanorama/app/src/main/: AndroidManifest.xml
Android/GyroPanorama/app/src/main/cpp/: CMakeLists.txt  common_libs.h  logger.h  native-lib.cpp
Android/GyroPanorama/app/src/main/cpp/geometry/: arithmetics.h
Android/GyroPanorama/app/src/main/cpp/image_warp/: image_reader.cpp  image_reader.h  pano_builder.cpp  pano_builder.h  quaternion.cpp  quaternion.h
Android/GyroPanorama/app/src/main/cpp/image_warp/stitcher/: pano_stitcher.cpp  pano_stitcher.h
Android/GyroPanorama/app/src/main/cpp/unityRenderingPlugin/: CMakeLists.txt  PlatformBase.h  RenderAPI.cpp  RenderAPI.h  RenderAPI_D3D11.cpp  RenderAPI_D3D12.cpp  RenderAPI_OpenGLCoreES.cpp  RenderAPI_Vulkan.cpp  RenderingPlugin.cpp
Android/GyroPanorama/app/src/main/cpp/unityRenderingPlugin/Unity/: IUnityGraphicsVulkan.h
Android/GyroPanorama/app/src/main/cpp/unityRenderingPlugin/pluginInterface/: CMakeLists.txt  renderEventEnum.h  unityPluginInterface.cpp  unityPluginInterface.h
Android/GyroPanorama/app/src/main/java/com/thunderwiring/myapplication/: MainActivity.kt
Android/GyroPanorama/app/src/test/java/com/thunderwiring/myapplication/: ExampleUnitTest.kt
Android/GyroPanorama/gradle/wrapper/: gradle-wrapper.properties
Unity/Panorama Gyro/: Scenes.cs
Unity/Panorama Gyro/Assets/Materials/: WarpMaterial.mat  WebCamTextureMaterial.mat
Unity/Panorama Gyro/Assets/Scenes/: CameraRecord.unity  pano.unity  panoramaSurface.unity
Unity/Panorama Gyro/Assets/Scripts/: CameraDevice.cs  CubeWarp.cs  FrameInfo.cs  GyroController.cs  GyroPanorama.cs  NativePlugin.cs  RenderEventEnum.cs  TouchableObject.cs  UnityLogger.cs
Unity/Panorama Gyro/Assets/Scripts/Panorama/: FrameTransformation.cs  FramesObserver.cs  PanoramaSurface.cs
Unity/Panorama Gyro/Assets/Shaders/: CamTexRotationShader.shader  FrameTo3DSphere.shader  Warp.shader
